--- a/index2.html
+++ b/index2.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ramon Flowers Portfolio</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./assets/style.css" />
   </head>
   <body>
     <header>
-      <h1>A day in the life...</h1>
+      <h1>Ramon Flowers Portfolio</h1>
       <nav>
         <ul>
           <li>
@@ -25,14 +25,21 @@
           </li>
         </ul>
       </nav>
+
     </header>
 
+    <section id="hero">
+
+    <h2> About Me </h2>
+
+    </section>
+    
     <section>Interests</section>
 
-    <aside>
-      There has been a lot going on in 2020 for us all and I hope to be able to
-      use these experiences this year to be able to move forward from here!
-    </aside>
-    
+    <p>
+      I've always enjoyed learning new things and pushing myself to be better
+      everyday. I enjoy the journey it takes to get to the final destionation.
+      Other interest include: sports, family, faith and continuing my education.
+    </p>
   </body>
 </html>
