--- a/index2.html
+++ b/index2.html
@@ -12,34 +12,52 @@
       <nav>
         <ul>
           <li>
-            <a href="">Interests</a>
+            <a href="">About Me</a>
           </li>
           <li>
-            <a href="">Experience</a>
-          </li>
-          <li>
-            <a href="">Future Plans</a>
+            <a href="">Work</a>
           </li>
           <li>
             <a href="">Contact Info</a>
           </li>
         </ul>
       </nav>
-
     </header>
 
     <section id="hero">
-
-    <h2> About Me </h2>
-
+      <h2>What A Time...</h2>
     </section>
-    
-    <section>Interests</section>
 
-    <p>
-      I've always enjoyed learning new things and pushing myself to be better
-      everyday. I enjoy the journey it takes to get to the final destionation.
-      Other interest include: sports, family, faith and continuing my education.
-    </p>
+    <section class="about">
+      <h2>About Me</h2>
+
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem laborum
+        ducimus dolorum delectus laboriosam ratione rerum soluta alias
+        voluptatem fugiat voluptatibus explicabo itaque consequatur, corporis
+        nostrum aliquid commodi accusamus voluptates? Lorem ipsum dolor sit amet
+        consectetur adipisicing elit. Ex, beatae ducimus quis itaque explicabo
+        possimus commodi quam. Beatae expedita aperiam at earum quos assumenda,
+        optio consequuntur dolor consectetur, quo eveniet.
+      </p>
+    </section>
+
+    <section class="work">
+      <h2>Experience</h2>
+    </section>
+
+    <section class="contact">
+      <h2>Contact Info</h2>
+
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem laborum
+        ducimus dolorum delectus laboriosam ratione rerum soluta alias
+        voluptatem fugiat voluptatibus explicabo itaque consequatur, corporis
+        nostrum aliquid commodi accusamus voluptates? Lorem ipsum dolor sit amet
+        consectetur adipisicing elit. Ex, beatae ducimus quis itaque explicabo
+        possimus commodi quam. Beatae expedita aperiam at earum quos assumenda,
+        optio consequuntur dolor consectetur, quo eveniet.
+      </p>
+    </section>
   </body>
 </html>
