--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
       <nav>
         <ul>
           <li>
-            <a href="">About Me</a>
+            <a href="#about">About Me</a>
           </li>
           <li>
-            <a href="">Work</a>
+            <a href="#work">Experience</a>
           </li>
           <li>
-            <a href="">Contact Info</a>
+            <a href="#contact">Contact Info</a>
           </li>
         </ul>
       </nav>
@@ -28,36 +28,62 @@
       <h2>What A Time...</h2>
     </section>
 
-    <section class="about">
-      <h2>About Me</h2>
-
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem laborum
-        ducimus dolorum delectus laboriosam ratione rerum soluta alias
-        voluptatem fugiat voluptatibus explicabo itaque consequatur, corporis
-        nostrum aliquid commodi accusamus voluptates? Lorem ipsum dolor sit amet
-        consectetur adipisicing elit. Ex, beatae ducimus quis itaque explicabo
-        possimus commodi quam. Beatae expedita aperiam at earum quos assumenda,
-        optio consequuntur dolor consectetur, quo eveniet.
-      </p>
+    <section id="about">
+      <div class="container">
+        <div class="title">
+          <h2 class="titles">About Me</h2>
+        </div>
+        <div class="text">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem
+            laborum ducimus dolorum delectus laboriosam ratione rerum soluta
+            alias voluptatem fugiat voluptatibus explicabo itaque consequatur,
+            corporis nostrum aliquid commodi accusamus voluptates? Lorem ipsum
+            dolor sit amet consectetur adipisicing elit. Ex, beatae ducimus quis
+            itaque explicabo possimus commodi quam. Beatae expedita aperiam at
+            earum quos assumenda, optio consequuntur dolor consectetur, quo
+            eveniet.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam
+            praesentium animi consequatur iusto facere laudantium nesciunt enim
+            at ipsum. Modi recusandae esse quisquam amet nostrum corrupti ex
+            eligendi rerum officiis. Lorem ipsum dolor, sit amet consectetur
+            adipisicing elit. Ipsam soluta facilis, ea temporibus, ducimus amet
+            impedit adipisci velit nam, at libero dolores! Atque nulla quas
+            explicabo veritatis repellendus minima nemo!
+          </p>
+        </div>
+      </div>
     </section>
 
-    <section class="work">
-      <h2>Experience</h2>
+    <section id="work">
+      <h2 class="titles">Experience</h2>
     </section>
 
-    <section class="contact">
-      <h2>Contact Info</h2>
-
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem laborum
-        ducimus dolorum delectus laboriosam ratione rerum soluta alias
-        voluptatem fugiat voluptatibus explicabo itaque consequatur, corporis
-        nostrum aliquid commodi accusamus voluptates? Lorem ipsum dolor sit amet
-        consectetur adipisicing elit. Ex, beatae ducimus quis itaque explicabo
-        possimus commodi quam. Beatae expedita aperiam at earum quos assumenda,
-        optio consequuntur dolor consectetur, quo eveniet.
-      </p>
+    <section id="contact">
+      <div class="container">
+        <div class="title">
+          <h2 class="titles">Contact Info</h2>
+        </div>
+        <div class="text">
+          <ul>
+            <li>
+              <a href="mailto: rocketorangemen@gmail.com">Email</a>
+            </li>
+            <li>
+              <a href="https://github.com/rocketorangemen">Github</a>
+            </li>
+            <li>
+              <a href="https://www.facebook.com/ramonanthonyflowers"
+                >Facebook</a>
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/ramon-flowers">LinkedIn</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </section>
   </body>
 </html>
