--- a/index.html
+++ b/index.html
@@ -58,7 +58,11 @@
     </section>
 
     <section id="work">
+      <div class="container">
+        <div class="title">
       <h2 class="titles">Experience</h2>
+        </div>
+      </div>
     </section>
 
     <section id="contact">
