--- a/index.html
+++ b/index.html
@@ -71,35 +71,35 @@
     <h3>Surf Report</h3>
     <p>MERIN Stack</p>
   </div>
-    <a href=""><img src="./assets/images/Brisick-Surfing-Selfie.jpg" alt="image 1 "></a>
+    <a href=""><img src="./assets/images/Brisick-Surfing-Selfie.jpg" alt="Surfing"></a>
   </div>
   <div class="work-item work-item-2">
     <div>
     <h3>Led Wall</h3>
     <p>Node/IoT</p>
   </div>
-  <a href=""><img src="./assets/images/item-22.jpg" alt="image 2"></a>
+  <a href=""><img src="./assets/images/item-22.jpg" alt="Computer and Coffee"></a>
   </div>
   <div class="work-item work-item-3">
     <div>
     <h3>Calculator</h3>
     <p>React/Javascript/CSS</p>
   </div>
-  <a href=""><img src="./assets/images/item-33.jpg" alt="image 3"></a>
+  <a href=""><img src="./assets/images/item-33.jpg" alt="Typing on a laptop"></a>
   </div>
   <div class="work-item work-item-4">
     <div>
     <h3>Horiseon</h3>
     <p>Refactoring HTML</p>
   </div>
-  <a href="https://github.com/rocketorangemen/Horiseon"><img src="./assets/images/brand-awareness.png" alt="Horiseon"></a>
+  <a href="https://github.com/rocketorangemen/Horiseon"><img src="./assets/images/brand-awareness.png" alt="Horiseon website"></a>
   </div>
   <div class="work-item work-item-5">
     <div>
     <h3>RUN Buddy</h3>
     <p>HTML/CSS</p>
   </div>
-  <a href="https://github.com/rocketorangemen/run-buddy"><img src="./assets/images/item-55.jpg" alt="runbuddy image"></a>
+  <a href="https://github.com/rocketorangemen/run-buddy"><img src="./assets/images/item-55.jpg" alt="Run Buddy Website"></a>
   </div>
   </div>
   </div>
