--- a/index.html
+++ b/index.html
@@ -68,24 +68,24 @@
         <div class="main-grid">
   <div class="work-item work-item-1">
     <div>
-    <h3>Surf Report</h3>
-    <p>MERIN Stack</p>
+    <h3>iCamp</h3>
+    <p>Front-End Project</p>
   </div>
-    <a href=""><img src="./assets/images/Brisick-Surfing-Selfie.jpg" alt="Surfing"></a>
+    <a href="https://dragoonkite.github.io/project1"><img src="./assets/images/iCamp.png" alt="icamp-Image"></a>
   </div>
   <div class="work-item work-item-2">
     <div>
-    <h3>Led Wall</h3>
-    <p>Node/IoT</p>
+    <h3>Password-Generator</h3>
+    <p>Javascript</p>
   </div>
-  <a href=""><img src="./assets/images/item-22.jpg" alt="Computer and Coffee"></a>
+  <a href="https://github.com/rocketorangemen/Password-Generator"><img src="./assets/images/generator.png" alt="Password-Generator"></a>
   </div>
   <div class="work-item work-item-3">
     <div>
-    <h3>Calculator</h3>
-    <p>React/Javascript/CSS</p>
+    <h3>weather-Dashboard</h3>
+    <p>Server-side API calls</p>
   </div>
-  <a href=""><img src="./assets/images/item-33.jpg" alt="Typing on a laptop"></a>
+  <a href="https://rocketorangemen.github.io/weather-dashboard/"><img src="./assets/images/weather.png" alt="weather-dashboard"></a>
   </div>
   <div class="work-item work-item-4">
     <div>
