fixed project link

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <h3>iCamp</h3>
     <p>Front-End Project</p>
   </div>
-    <a href="https://dragoonkite.github.io/project1"><img src="./assets/images/iCamp.png" alt="icamp-Image"></a>
+    <a href="https://dragoonkite.github.io/iCamp/"><img src="./assets/images/iCamp.png" alt="icamp-Image"></a>
   </div>
   <div class="work-item work-item-2">
     <div>
