updated with newest project

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <h3>Horiseon</h3>
     <p>Refactoring HTML</p>
   </div>
-  <a href="https://github.com/rocketorangemen/Horiseon"><img src="./assets/images/brand-awareness.png" alt="Horiseon website"></a>
+  <a href="https://github.com/DragoonKite/eat-out-austin"><img src="./assets/images/screenshot.png" alt="Eat-Out-Austin"></a>
   </div>
   <div class="work-item work-item-5">
     <div>
